syntax = "proto3";
package cosmonaut.leaderboard.leaderboard;

import "gogoproto/gogo.proto";
import "leaderboard/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/cosmonaut/leaderboard/x/leaderboard/types";

// GenesisState defines the leaderboard module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  string port_id = 2;
  // this line is used by starport scaffolding # genesis/proto/state
}
